Make github users end point functional
